kiosk: No shelf/launcher in tablet mode

- Shelf stays with SHELF_AUTO_HIDE_ALWAYS_HIDDEN in tablet mode when
  running in a kiosk session;
- App window keeps the immersive mode disabled when entering tablet
  mode in a kiosk session;

Bug: 834058
Test: ash_unittests ShelfControllerAppModeTest.AutoHideBehavior and browser_tests ChromeNativeAppWindowViewsAuraAshBrowserTest.NoImmersiveModeWhenForcedFullscreen
Change-Id: I57cf9ac08fdc48c433dcb0d5c3f7c561041431c3
Reviewed-on: https://chromium-review.googlesource.com/1035522
Reviewed-by: James Cook <jamescook@chromium.org>
Reviewed-by: Ben Wells <benwells@chromium.org>
Commit-Queue: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555222}
Former-commit-id: 645b928b86c3b6ddaf4a9e1f8339cf7c18278b24