ash/shelf/shelf_controller_unittest.cc
@@ -452,5 +452,26 @@ TEST_F(ShelfControllerPrefsTest, ShelfSettingsInTabletMode) {
   EXPECT_EQ(SHELF_AUTO_HIDE_BEHAVIOR_ALWAYS, shelf->auto_hide_behavior());
 }
 
+using ShelfControllerAppModeTest = NoSessionAshTestBase;
+
+// Tests that shelf auto hide behavior is always hidden in app mode.
+TEST_F(ShelfControllerAppModeTest, AutoHideBehavior) {
+  SimulateKioskMode(user_manager::USER_TYPE_KIOSK_APP);
+
+  Shelf* shelf = GetPrimaryShelf();
+  EXPECT_EQ(SHELF_AUTO_HIDE_ALWAYS_HIDDEN, shelf->auto_hide_behavior());
+
+  Shell::Get()->tablet_mode_controller()->EnableTabletModeWindowManager(true);
+  EXPECT_EQ(SHELF_AUTO_HIDE_ALWAYS_HIDDEN, shelf->auto_hide_behavior());
+
+  display_manager()->SetDisplayRotation(
+      display::Screen::GetScreen()->GetPrimaryDisplay().id(),
+      display::Display::ROTATE_90, display::Display::RotationSource::ACTIVE);
+  EXPECT_EQ(SHELF_AUTO_HIDE_ALWAYS_HIDDEN, shelf->auto_hide_behavior());
+
+  Shell::Get()->tablet_mode_controller()->EnableTabletModeWindowManager(false);
+  EXPECT_EQ(SHELF_AUTO_HIDE_ALWAYS_HIDDEN, shelf->auto_hide_behavior());
+}
+
 }  // namespace
 }  // namespace ash
